--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,5 +1,5 @@
 deploy.ant.properties.file=/home/pedro/.netbeans/8.0.1/tomcat80.properties
 j2ee.server.home=/opt/apache-tomcat-8.0.14
 j2ee.server.instance=tomcat80:home=/opt/apache-tomcat-8.0.14
-selected.browser=default
+selected.browser=Chrome.INTEGRATED
 user.properties.file=/home/pedro/.netbeans/8.0.1/build.properties
